--- a/lab4.html
+++ b/lab4.html
@@ -26,7 +26,26 @@
         </nav>
     </header>
     <main>
-        <p>Тут завдання лаби 4</p>
+        <h3>Завдання:</h3>
+        <p><br>Розробити сторінку зі скриптом, в якому створюється об'єкт Машина з трьома властивостями: колір, марка, модель.
+        <br>Створити масив з декількома об‘єктами даного класу. Вивести після натискання кнопки всі значення властивостей на екран у вигляді таблиці.</p>
+        <section class="lab4_task1">
+            <button class="button_lab4" onclick="displayCarInfo()">Вивести інформацію про машини</button>
+
+            <table class="lab4_table" id="carsTable">
+                <thead>
+                    <tr>
+                        <th>Колір</th>
+                        <th>Марка</th>
+                        <th>Модель</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Тут буде вміст таблиці, який буде створений за допомогою скрипту -->
+                </tbody>
+            </table>
+
+        </section>
     </main>
 </body>
 </html>
